tests/snapshots/test_typeinferer__tests__parser_12.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(&format!(\"tests/data/infer{}.plsr\", test_num),\n    error_manager.clone())"
---
pure func square(value: Int64) -> Int64 {
    return (value: Int64 * value: Int64): Int64
}
func sum_squares(input: Int64[4]) -> Int64 {
    let squares = map<1>(square, input: Int64[4]): Int64[4]
    return 0: Int64
}
