tests/snapshots/test_typeinferer__tests__parser_15.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(&format!(\"tests/data/infer{}.plsr\", test_num),\n    error_manager.clone())"
---
pure func square(value: Int64) -> Int64 {
    return (value: Int64 * value: Int64): Int64
}
func sum_squares(input: Int64[4]) -> Int64 {
    let squares = map<4>(square, input: Int64[4]): Int64[4]
    return 0: Int64
    let a = 3: Int64
    return 0: Int64
}
pure func square2(value: Int64) -> Int64 {
    return (value: Int64 * value: Int64): Int64
}
func sum_squares2(input: Int64[4]) -> Int64 {
    let squares = map<4>(square2, input: Int64[4]): Int64[4]
    return 0: Int64
    return 0: Int64
}
warning[W0010]: tests/data/infer15.plsr:8:5: Statement is never reached
     │  
   7 │      return 0
   8 │      let a = 3 
   9 │      return 0
     │  
   ...
     │  
   6 │      let squares = map<4>(square, input)
   7 │      return 0 
     │      └─────── Returned from function `sum_squares` here
   8 │      let a = 3
     │  

warning[W0010]: tests/data/infer15.plsr:19:5: Statement is never reached
     │  
  18 │      return 0
  19 │      return 0 
  20 │  }
     │  
   ...
     │  
  17 │      let squares = map<4>(square2, input)
  18 │      return 0 
     │      └─────── Returned from function `sum_squares2` here
  19 │      return 0
     │
