tests/snapshots/test_typeinferer__tests__parser_4.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(&format!(\"tests/data/infer{}.plsr\", test_num),\n    error_manager.clone())"
---
func main() -> Unit {
    let huh: Int64 = []: 't0[0]
    return
}
error[E0010]: tests/data/infer4.plsr:2:8: Failed to unify types `Int64` and `'t0[0]`
     │  
   1 │  func main() {
   2 │     let huh: Int = []
     │         └── Type inferred here to be `Int64`
   3 │  }
     │  
   ...
     │  
   1 │  func main() {
   2 │     let huh: Int = [] 
     │                    └─ Type inferred here to be `'t0[0]`
   3 │  }
     │
